2006-02-22  Simon Zheng <simon.zheng@sun.com>

	Fix for 331993.

	* printing/medbook.ecps: Add "Regular" to the font name.

2006-02-14  Devashish Sharma  <sdevashish@novell.com>

	* e-contact-print.c : Use of pango for text handling when 
	printing address book.
	See Bug #269430.

2006-02-13  Andre Klapper  <a9016009@gmx.de>
 
	* ldap-config.glade: Fix the Security options to finally be 
	descriptive, rather than obscuring. Identical to the changes in
	mail/em-account-editor.c to fix the UI part of bug #321797.

2006-02-05  Karsten Bräckelmann  <guenther@rudersport.de>

	* gui/component/GNOME_Evolution_Addressbook.server.in.in: 
	Correcting "Addressbook" to properly read "Address Book".
	Fixes bug #326256.

	* gui/component/addressbook-config.c (addressbook_config_edit_source): 
	* gui/component/addressbook-component.c (impl_upgradeFromVersion): 
	Correcting "Addressbook" to properly read "Address Book".
	Fixes bug #326256.

2006-02-05  Andre Klapper  <a9016009@gmx.de>

	* gui/component/ldap-config.glade: fixing one typo.
	fixes #304996 partially.

2006-02-01  Devashish Sharma  <sdevashish@novell.com>

	* gui/contact-editor/e-contact-editor.c: File selector shows preview
	of the image when choosing picture of a contact.
	Fixes bug #300884.
	
2006-02-01  Devashish Sharma  <sdevashish@novell.com>

	* gui/widgets/e-minicard.c : (e_minicard_reflow) Fixed a bug which was
	causing addressbook view by address card getting all messed up.
	Fixes Bug #329315.

2006-01-30  Tor Lillqvist  <tml@novell.com>

	* gui/component/Makefile.am (libevolution_addressbook_la_LIBADD):
	Link with libefilterbar, too.

2006-01-30  Harish Krishnaswamy  <kharish@novell.com>

	* gui/component/addressbook-view.c:
	* gui/widgets/e-addressbook-view.c:
	Remove inclusion of unused header.

2006-01-30  Sushma Rai  <rsushma@novell.com>

	* gui/component/Makefile.am: Removed reference to "search" directory.
	Fixes the build issue.

2006-01-30  Devashish Sharma  <sdevashish@novell.com>
